Bug 225559 - Opening a file (.jpg) causes instant crash in Krita
Summary: Opening a file (.jpg) causes instant crash in Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-04 23:16 UTC by Kubuntiac
Modified: 2010-02-05 12:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kubuntiac 2010-02-04 23:16:59 UTC
Application: krita (2.2 Alpha 1)
KDE Platform Version: 4.3.98 (KDE 4.3.98 (KDE 4.4 RC3))
Qt Version: 4.6.1
Operating System: Linux 2.6.32-12-generic x86_64
Distribution: Ubuntu lucid (development branch)

-- Information about the crash:
I'm on rev#1085316 just compiled.

When I first open Krita and choose to open a file (a .jpg) krita tries to load for a couple of seconds and then crashes with the following backtrace every time.

I'm on Kubuntu Lucid AMD64.

This was picked up as a possible dupe by the bug reporting tool, however the other bug was fixed in SVN in 2008(!) and this was a compile from sources updated today.

The crash can be reproduced every time.

 -- Backtrace:
Application: Krita (krita), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f26616a0840 (LWP 32609))]

Thread 6 (Thread 0x7f264f7ed710 (LWP 32610)):
#0  0x00007f2660c3c6cc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f2660ec870b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f2660ec4660 in QSemaphore::acquire(int) () from /usr/lib/libQtCore.so.4
#3  0x00007f26604317de in KisTileDataPooler::waitForWork (this=0x7f2660795620) at /home/user/source/koffice/krita/image/tiles3/kis_tile_data_pooler.cc:128
#4  0x00007f2660431bd8 in KisTileDataPooler::run (this=0x7f2660795620) at /home/user/source/koffice/krita/image/tiles3/kis_tile_data_pooler.cc:157
#5  0x00007f2660ec7755 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f2660c37b14 in start_thread () from /lib/libpthread.so.0
#7  0x00007f26596b407d in clone () from /lib/libc.so.6
#8  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f263ba91710 (LWP 32612)):
#0  0x00007f26596acc03 in select () from /lib/libc.so.6
#1  0x00007f2660fe26ce in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007f2660fe7d3d in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007f2660fe8aeb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f2660fba582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f2660fba95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f2660ec4d39 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f2660f9adc8 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f2660ec7755 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f2660c37b14 in start_thread () from /lib/libpthread.so.0
#10 0x00007f26596b407d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f262f273710 (LWP 32613)):
#0  0x00007f2660c3ca39 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f2634b5cc91 in ?? () from /usr/lib/libxine.so.1
#2  0x00007f2660c37b14 in start_thread () from /lib/libpthread.so.0
#3  0x00007f26596b407d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f262954e710 (LWP 32614)):
#0  0x00007f26596acc03 in select () from /lib/libc.so.6
#1  0x00007f2634b85865 in xine_usec_sleep () from /usr/lib/libxine.so.1
#2  0x00007f2634b6a7b9 in ?? () from /usr/lib/libxine.so.1
#3  0x00007f2660c37b14 in start_thread () from /lib/libpthread.so.0
#4  0x00007f26596b407d in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f264e345710 (LWP 32619)):
#0  0x00007f26596acc03 in select () from /lib/libc.so.6
#1  0x00007f2660fe26ce in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007f2660fe7d3d in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007f2660fe8aeb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f2660fba582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f2660fba95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f2660ec4d39 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f2660ec7755 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f2660c37b14 in start_thread () from /lib/libpthread.so.0
#9  0x00007f26596b407d in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f26616a0840 (LWP 32609)):
[KCrash Handler]
#5  KisPaintOpPreset::setSettings (this=0x8293d00, settings=) at /home/user/source/koffice/krita/image/brushengine/kis_paintop_preset.cpp:88
#6  0x00007f26604532a0 in KisPaintOpRegistry::defaultPreset (this=0x43ffb70, id=..., image=) at /home/user/source/koffice/krita/image/brushengine/kis_paintop_registry.cc:114
#7  0x00007f26608ec911 in KisPaintopBox::activePreset (this=0x81ec440, paintop=<value optimized out>, inputDevice=<value optimized out>) at /home/user/source/koffice/krita/ui/kis_paintop_box.cc:332
#8  0x00007f26608ed0ff in KisPaintopBox::paintOpPresetSP (this=0x81ec440, paintop=0x82eea40) at /home/user/source/koffice/krita/ui/kis_paintop_box.cc:132
#9  0x00007f26609209f6 in KoFavoriteResourceManager (this=0x8223b30, paintopBox=<value optimized out>, popupParent=<value optimized out>)
    at /home/user/source/koffice/krita/ui/ko_favorite_resource_manager.cpp:57
#10 0x00007f2660919d8c in KisView2::setFavoriteResourceManager (this=0x6e8cc80, paintopBox=0x81ec440) at /home/user/source/koffice/krita/ui/kis_view2.cpp:770
#11 0x00007f266089def0 in KisControlFrame (this=0x7f26483b9d80, view=0x6e8cc80, name=<value optimized out>) at /home/user/source/koffice/krita/ui/kis_control_frame.cpp:119
#12 0x00007f266091dcd7 in KisView2 (this=0x6e8cc80, doc=<value optimized out>, parent=<value optimized out>, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>)
    at /home/user/source/koffice/krita/ui/kis_view2.cpp:254
#13 0x00007f26608abaeb in KisDoc2::createViewInstance (this=0x7f264807dfc0, parent=0x44d3920) at /home/user/source/koffice/krita/ui/kis_doc2.cc:422
#14 0x00007f265fc2d1ba in KoDocument::createView (this=0x7f2659949e40, parent=0x0) at /home/user/source/koffice/libs/main/KoDocument.cpp:345
#15 0x00007f265fc57cd9 in KoMainWindow::setRootDocument (this=0x17ca7e0, doc=0x7f264807dfc0) at /home/user/source/koffice/libs/main/KoMainWindow.cpp:452
#16 0x00007f265fc2f034 in KoDocument::deleteOpenPane (this=0x7f264807dfc0) at /home/user/source/koffice/libs/main/KoDocument.cpp:2349
#17 0x00007f265fc36e4b in KoDocument::openFile (this=0x7f264807dfc0) at /home/user/source/koffice/libs/main/KoDocument.cpp:1358
#18 0x00007f265c7ad067 in KParts::ReadOnlyPart::openUrl(KUrl const&) () from /usr/lib/libkparts.so.4
#19 0x00007f265fc3508c in KoDocument::openUrl (this=0x7f264807dfc0, _url=...) at /home/user/source/koffice/libs/main/KoDocument.cpp:1148
#20 0x00007f265fc2d41d in KoDocument::openExistingFile (this=0x7f2659949e40, url=...) at /home/user/source/koffice/libs/main/KoDocument.cpp:2274
#21 0x00007f26608ab2ac in KisDoc2::openExistingFile (this=0x7f264807dfc0, url=...) at /home/user/source/koffice/krita/ui/kis_doc2.cc:176
#22 0x00007f26608ab8d6 in KisDoc2::qt_metacall (this=0x7f264807dfc0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff252472e0)
    at /home/user/Apps/koffice/build/krita/ui/kis_doc2.moc:87
#23 0x00007f2660fcea5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#24 0x00007f265fc9a032 in KoOpenPane::openExistingFile (this=0x7f2659949e40, _t1=<value optimized out>) at /home/user/Apps/koffice/build/libs/main/KoOpenPane.moc:104
#25 0x00007f265fc9a4e0 in KoOpenPane::qt_metacall (this=0x464ab40, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff25247410)
    at /home/user/Apps/koffice/build/libs/main/KoOpenPane.moc:86
#26 0x00007f2660fcea5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#27 0x00007f265fc99902 in KoExistingDocumentPane::openExistingUrl (this=0x7f2659949e40, _t1=<value optimized out>) at /home/user/Apps/koffice/build/libs/main/KoExistingDocumentPane.moc:89
#28 0x00007f265fc99993 in KoExistingDocumentPane::onAccepted (this=0x4838090) at /home/user/source/koffice/libs/main/KoExistingDocumentPane.cpp:59
#29 0x00007f265fc99a21 in KoExistingDocumentPane::qt_metacall (this=0x4838090, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff25247520)
    at /home/user/Apps/koffice/build/libs/main/KoExistingDocumentPane.moc:77
#30 0x00007f2660fcea5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#31 0x00007f265742e8e8 in KFileWidget::slotOk() () from /usr/lib/libkfile.so.4
#32 0x00007f2657424322 in ?? () from /usr/lib/libkfile.so.4
#33 0x00007f265742d54c in KFileWidget::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkfile.so.4
#34 0x00007f2660fcea5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#35 0x00007f2657406805 in KDirOperator::fileSelected(KFileItem const&) () from /usr/lib/libkfile.so.4
#36 0x00007f26574072d4 in KDirOperator::Private::_k_slotActivated(QModelIndex const&) () from /usr/lib/libkfile.so.4
#37 0x00007f265741237d in KDirOperator::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkfile.so.4
#38 0x00007f2660fcea5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#39 0x00007f265b149475 in QAbstractItemView::activated(QModelIndex const&) () from /usr/lib/libQtGui.so.4
#40 0x00007f265b15642d in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#41 0x00007f265b16c3ae in QListView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#42 0x00007f265ac84412 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#43 0x00007f265b02a0a6 in QFrame::event(QEvent*) () from /usr/lib/libQtGui.so.4
#44 0x00007f265b15931b in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#45 0x00007f2660fbb077 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#46 0x00007f265ac2e04c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#47 0x00007f265ac34e4b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#48 0x00007f265b937366 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#49 0x00007f2660fbbc5c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#50 0x00007f265ac3401e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#51 0x00007f265acb3515 in ?? () from /usr/lib/libQtGui.so.4
#52 0x00007f265acb222a in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#53 0x00007f265acde5b9 in ?? () from /usr/lib/libQtGui.so.4
#54 0x00007f2660fba582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#55 0x00007f2660fba95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#56 0x00007f2660fbe69b in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#57 0x00007f26612d3d45 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /home/user/source/koffice/krita/main.cc:49
#58 0x00007f26595eec4d in __libc_start_main () from /lib/libc.so.6
#59 0x00000000004008d9 in _start ()

This bug may be a duplicate of or related to bug 170732.

Possible duplicates by query: bug 173591, bug 170732.

Reported using DrKonqi
Comment 1 Kubuntiac 2010-02-05 11:11:00 UTC
Just discovered that there's only a libjpeg62-dev and libjpeg7 on Kubuntu Lucid, and no libjpeg7-dev. Feel free to close if that would be the problem, and I'll install libjpeg7-dev when it becomes available and test again.
Comment 2 Kubuntiac 2010-02-05 11:55:39 UTC
Hmmm... turns out Krita is crashing everytime it opens. Doesn't matter if I try to open a .jpg, a .png or create a new file.

I guess it's probably just a compile issue after all.
Comment 3 Kubuntiac 2010-02-05 12:14:36 UTC
Backtrace after removing ~/.kde/share/apps/krita
(This bug still gets picked as a probable dupe by DrKonqi)


Application: Krita (krita), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f74198e0840 (LWP 26612))]

Thread 6 (Thread 0x7f7407a2b710 (LWP 26613)):
#0  0x00007f7418e7c6cc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f741910870b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f7419104660 in QSemaphore::acquire(int) () from /usr/lib/libQtCore.so.4
#3  0x00007f74186717de in KisTileDataPooler::waitForWork (this=0x7f74189d5620) at /home/user/source/koffice/krita/image/tiles3/kis_tile_data_pooler.cc:128
#4  0x00007f7418671bd8 in KisTileDataPooler::run (this=0x7f74189d5620) at /home/user/source/koffice/krita/image/tiles3/kis_tile_data_pooler.cc:157
#5  0x00007f7419107755 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f7418e77b14 in start_thread () from /lib/libpthread.so.0
#7  0x00007f74118f407d in clone () from /lib/libc.so.6
#8  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f73f3c99710 (LWP 26615)):
#0  0x00007f74118ecc03 in select () from /lib/libc.so.6
#1  0x00007f74192226ce in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007f7419227d3d in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007f7419228aeb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f74191fa582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f74191fa95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f7419104d39 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f74191dadc8 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f7419107755 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f7418e77b14 in start_thread () from /lib/libpthread.so.0
#10 0x00007f74118f407d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f73e749c710 (LWP 26618)):
#0  0x00007f7418e7ca39 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f73ecd85c91 in ?? () from /usr/lib/libxine.so.1
#2  0x00007f7418e77b14 in start_thread () from /lib/libpthread.so.0
#3  0x00007f74118f407d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f73e1777710 (LWP 26619)):
#0  0x00007f74118ecc03 in select () from /lib/libc.so.6
#1  0x00007f73ecdae865 in xine_usec_sleep () from /usr/lib/libxine.so.1
#2  0x00007f73ecd937b9 in ?? () from /usr/lib/libxine.so.1
#3  0x00007f7418e77b14 in start_thread () from /lib/libpthread.so.0
#4  0x00007f74118f407d in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f73e0f76710 (LWP 26620)):
#0  0x00007f74118ecc03 in select () from /lib/libc.so.6
#1  0x00007f74192226ce in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007f7419227d3d in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007f7419228aeb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f74191fa582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f74191fa95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f7419104d39 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f7419107755 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f7418e77b14 in start_thread () from /lib/libpthread.so.0
#9  0x00007f74118f407d in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f74198e0840 (LWP 26612)):
[KCrash Handler]
#5  KisPaintOpPreset::setSettings (this=0x6bab7c0, settings=) at /home/user/source/koffice/krita/image/brushengine/kis_paintop_preset.cpp:88
#6  0x00007f74186932a0 in KisPaintOpRegistry::defaultPreset (this=0x4cd7e80, id=..., image=) at /home/user/source/koffice/krita/image/brushengine/kis_paintop_registry.cc:114
#7  0x00007f7418b2c911 in KisPaintopBox::activePreset (this=0x6a0a390, paintop=<value optimized out>, inputDevice=<value optimized out>) at /home/user/source/koffice/krita/ui/kis_paintop_box.cc:332
#8  0x00007f7418b2d0ff in KisPaintopBox::paintOpPresetSP (this=0x6a0a390, paintop=0x6a32fc0) at /home/user/source/koffice/krita/ui/kis_paintop_box.cc:132
#9  0x00007f7418b609f6 in KoFavoriteResourceManager (this=0x6bac0f0, paintopBox=<value optimized out>, popupParent=<value optimized out>)
    at /home/user/source/koffice/krita/ui/ko_favorite_resource_manager.cpp:57
#10 0x00007f7418b59d8c in KisView2::setFavoriteResourceManager (this=0x5a8a3d0, paintopBox=0x6a0a390) at /home/user/source/koffice/krita/ui/kis_view2.cpp:770
#11 0x00007f7418addef0 in KisControlFrame (this=0x7f74004aa910, view=0x5a8a3d0, name=<value optimized out>) at /home/user/source/koffice/krita/ui/kis_control_frame.cpp:119
#12 0x00007f7418b5dcd7 in KisView2 (this=0x5a8a3d0, doc=<value optimized out>, parent=<value optimized out>, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>)
    at /home/user/source/koffice/krita/ui/kis_view2.cpp:254
#13 0x00007f7418aebaeb in KisDoc2::createViewInstance (this=0x7f74000a0770, parent=0x4daae30) at /home/user/source/koffice/krita/ui/kis_doc2.cc:422
#14 0x00007f7417e6d1ba in KoDocument::createView (this=0x7f7411b89e40, parent=0x0) at /home/user/source/koffice/libs/main/KoDocument.cpp:345
#15 0x00007f7417e97cd9 in KoMainWindow::setRootDocument (this=0x2097750, doc=0x7f74000a0770) at /home/user/source/koffice/libs/main/KoMainWindow.cpp:452
#16 0x00007f7417e6f034 in KoDocument::deleteOpenPane (this=0x7f74000a0770) at /home/user/source/koffice/libs/main/KoDocument.cpp:2349
#17 0x00007f7417e73208 in KoDocument::qt_metacall (this=0x7f74000a0770, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff39be4780)
    at /home/user/Apps/koffice/build/libs/main/KoDocument.moc:129
#18 0x00007f7418aeb840 in KisDoc2::qt_metacall (this=0x7f7411b89e40, _c=QMetaObject::InvokeMetaMethod, _id=112352800, _a=0x60920) at /home/user/Apps/koffice/build/krita/ui/kis_doc2.moc:78
#19 0x00007f741920ea5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#20 0x00007f7418bcc1cd in KisCustomImageWidget::buttonClicked (this=0x57f2bb0) at /home/user/source/koffice/krita/ui/widgets/kis_custom_image_widget.cc:214
#21 0x00007f7418bcc6ec in KisCustomImageWidget::qt_metacall (this=0x57f2bb0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff39be4b90)
    at /home/user/Apps/koffice/build/krita/ui/kis_custom_image_widget.moc:139
#22 0x00007f741920ea5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#23 0x00007f7413507022 in QAbstractButton::clicked(bool) () from /usr/lib/libQtGui.so.4
#24 0x00007f741322245b in ?? () from /usr/lib/libQtGui.so.4
#25 0x00007f741322331b in ?? () from /usr/lib/libQtGui.so.4
#26 0x00007f741322358c in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#27 0x00007f7412ec4412 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#28 0x00007f7412e6e07c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#29 0x00007f7412e74e4b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#30 0x00007f7413b76d66 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#31 0x00007f74191fbc5c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#32 0x00007f7412e7401e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#33 0x00007f7412ef3515 in ?? () from /usr/lib/libQtGui.so.4
#34 0x00007f7412ef222a in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#35 0x00007f7412f1e5b9 in ?? () from /usr/lib/libQtGui.so.4
#36 0x00007f74191fa582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#37 0x00007f74191fa95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#38 0x00007f74191fe69b in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#39 0x00007f7419513d45 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /home/user/source/koffice/krita/main.cc:49
#40 0x00007f741182ec4d in __libc_start_main () from /lib/libc.so.6
#41 0x00000000004008d9 in _start ()
Comment 4 Cyrille Berger 2010-02-05 12:44:37 UTC
SVN commit 1085510 by berger:

Do not crash when invalid pointer is in the favorite list
Do not leak ids.

BUG:225559


 M  +5 -2      ko_favorite_resource_manager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1085510