Do not crash when invalid pointer is in the favorite list Do not leak ids.

BUG:225559

svn path=/trunk/koffice/; revision=1085510